feature/virtual_examples - more examples