@@ -10,12 +10,14 @@ public class PinningIO {
      * The java.io package provides APIs for streams of bytes and characters.
      * The implementations of these APIs are heavily synchronized and require
      * changes to avoid pinning when they are used in virtual threads.
+     * <a href="https://openjdk.org/jeps/444#java-io">...</a>
+     * VM options -Djdk.tracePinnedThreads=full
      */
     public static void main(String[] args) {
         Runnable task = () -> {
             System.out.println("before read - " + Thread.currentThread());
             try (var fis = new FileInputStream("C:\\Users\\konra\\Desktop\\loom\\src\\main\\resources\\example.txt")) {
-                int read = fis.read();
+                int read = fis.read(); // Potential pinning (blocking IO)
                 System.out.println(read);
                 Thread.sleep(100);
             } catch (IOException | InterruptedException e) {
