@@ -5,6 +5,10 @@ import java.util.concurrent.locks.ReentrantLock;
 
 public class PinningReentrantLock {
 
+    /**
+     * <a href="https://openjdk.org/jeps/491">...</a>
+     * VM options -Djdk.tracePinnedThreads=full -Djdk.virtualThreadScheduler.parallelism=1
+     */
     private static final ReentrantLock lock = new ReentrantLock();
 
     public static void main(String[] args) {
@@ -12,7 +16,7 @@ public class PinningReentrantLock {
             synchronized (lock) {
                 System.out.println("Start: " + Thread.currentThread());
                 try {
-                    Thread.sleep(3000);
+                    Thread.sleep(3000); // Pinning, because synchronized (lock)
                 } catch (InterruptedException e) {
                     throw new RuntimeException(e);
                 }
