@@ -2,9 +2,12 @@ package com.kowalczyk.konrad.loom.virtual.pinning;
 
 import java.util.concurrent.Executors;
 
-//https://openjdk.org/jeps/491
 public class PinningSynchronized {
 
+    /**
+     * <a href="https://openjdk.org/jeps/491">...</a>
+     * VM options -Djdk.tracePinnedThreads=full -Djdk.virtualThreadScheduler.parallelism=1
+     */
     private static final Object lock = new Object();
 
     public static void main(String[] args) {
@@ -12,7 +15,7 @@ public class PinningSynchronized {
             synchronized (lock) {
                 System.out.println("Start: " + Thread.currentThread());
                 try {
-                    Thread.sleep(3000);
+                    Thread.sleep(3000); // Pinning, because synchronized (lock)
                 } catch (InterruptedException e) {
                     throw new RuntimeException(e);
                 }
